✨ Add student statistics
