# backend/UBBGradePortal.Application/DTOs/Statistics/CourseDomainStatDto.cs
@@ -1,0 +1,7 @@
+namespace UBBGradePortal.Application.DTOs.Statistics;
+
+public class CourseDomainStatDto
+{
+    public string? Name { get; set; }
+    public int CoursesCount { get; set; }
+}
